add UI components

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 20px;
   padding: 0;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
@@ -10,4 +10,4 @@ h1 {
   padding: 0 0 20px;
   margin: 0;
   color: rgb(58, 58, 58);
-}
+} */
